@@ -1,3 +1,9 @@
+Wed May 12 18:44:49 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
+
+	* doc/.cvsignore: new file.
+
+	* doc/Makefile (SOURCE,TMPDIRS): remove Getopt stuff.
+
 Wed May 12 18:23:10 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
 
 	* .cvsignore:
